# oraculo

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cc
